fixed icon row overflow

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ a.some-link:hover{
 	margin-top: 20px;
 }
 .fa{
-	font-size: 40px;
+	font-size: 35px;
 	width: 40px;
 	text-align: center;
 	text-decoration: none;
